--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                 <h3>freelancing</h3>
                 <h4>web developing</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Freelancing is also a form of entrepreneurship, which means the freelancer has total control of their earning potential. Freelancers aren’t locked into a salary, and so they can earn as much as they are able to bill to their clients.
+
+And as a freelancer, you are your own boss.
                 </p>
             </div>
 
@@ -97,7 +99,7 @@
                 <h3>Socail worker</h3>
                 <h4>guidner</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                   In some locales, one can be a social services worker without a license, but not a social worker. But having the title – and the education that it is based on – can be a real asset. Those who do casework are not always social workers. Yet publications by NASW suggest that, to a disproportionate degree, those who are happy doing casework are.
                 </p>
             </div>
 
